# Custom_communcation_protocol

./: .gitattributes  CMakeLists.txt  README.md  main.c  protocol.c  transmitter.c  transmitter.h
PC/: client.py  connector.py
